fixed date alignment & btn colours

--- a/app/assets/stylesheets/components/_urgency.scss
+++ b/app/assets/stylesheets/components/_urgency.scss
@@ -37,6 +37,13 @@
   padding: 0;
 }
 
+.dash {
+  color: #a4a4a4;
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+}
+
 .trash {
   color: rgba(0, 0, 0, .40);
   font-size: 20px;
